--- a/client/style.css
+++ b/client/style.css
@@ -8,27 +8,41 @@
   font-weight: 900;
 }
 
-.item {
-  margin: auto;
-  text-align: center;
-  color: #fff;
+.scroll {
+  background: #fff;
+  border: 2px;
+  color: #999;
+  height:35px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-form {
+.text {
+  background: #fff;
+  color: #999;
+}
+
+.item {
+  text-align: center;
+  color: #fff;
+  /*background-color: rgb(179, 0, 0);*/
+}
+
+form, .profile {
   display: flex;
   flex-flow: column nowrap;
 }
 
-input {
+
+input, .hello {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 5px;
-  height: 30px;
 }
 
-.button {
+button, .button {
   background: rgba(255, 255, 255, 0.5);
   color: #fff;
 }
