--- a/client/style.css
+++ b/client/style.css
@@ -2,9 +2,8 @@
 .container {
   display: flex;
   flex-flow: column nowrap;
-  height: 400px;
-  background: url("./green_mountains.jpeg") no-repeat center;
-  background-size: cover;
+  height: 600px;
+  background-color: #f5f5dc;
   font-weight: 900;
 }
 
@@ -19,12 +18,12 @@
 
 .text {
   background: #fff;
-  color: #999;
+  color: black;
 }
 
 .item {
   text-align: center;
-  color: #fff;
+  color: black;
   /*background-color: rgb(179, 0, 0);*/
 }
 
@@ -33,8 +32,7 @@ form, .profile {
   flex-flow: column nowrap;
 }
 
-
-input, .hello {
+input, .hello , textarea{
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: auto;
@@ -44,5 +42,5 @@ input, .hello {
 
 button, .button {
   background: rgba(255, 255, 255, 0.5);
-  color: #fff;
+  color: black;
 }
