--- a/client2/style.css
+++ b/client2/style.css
@@ -1,43 +1,44 @@
 .container {
-  display: -webkit-flex;
-  display: flex;
   height: 800px;
 }
 
-.sidebar {
+.sidebar, .main, form {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: column nowrap;
   flex-flow: column nowrap;
+}
+
+.tabs, .topbar, .container {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.sidebar {
   -webkit-flex-grow: 1;
   flex-grow:         1;
+  border-right: solid;
 }
 
 .tabs {
-  display: -webkit-flex;
-  display: flex;
   height: 50px;
   align-items: flex-end;
+  border-bottom: solid;
 }
 
-.invites {
+#invites {
   margin-left: 5px
 }
 
 .main {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: column nowrap;
-  flex-flow: column nowrap;
   -webkit-flex-grow: 4;
   flex-grow:         4;
 }
 
 .topbar {
-  display: -webkit-flex;
-  display: flex;
   height: 50px;
   align-items: flex-end;
+  border-bottom: solid;
 }
 
 .activity {
