--- a/client2/style.css
+++ b/client2/style.css
@@ -2,11 +2,16 @@
   height: 800px;
 }
 
-.sidebar, .main, form, .eventButtons{
+.sidebar, .main, form, .eventButtons, .invite{
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: column nowrap;
   flex-flow: column nowrap;
+}
+
+.invite {
+  justify-content: center;
+  align-items: center
 }
 
 .eventButtons {
