--- a/client/style.css
+++ b/client/style.css
@@ -6,6 +6,7 @@
   height: 30px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+  margin: auto;
 }
 
 @-webkit-keyframes spin {
