--- a/client/style.css
+++ b/client/style.css
@@ -25,6 +25,45 @@
 }
 
 .sort {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
+
+.right {
+  float: right;
+}
+
+.eventsContainer {
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column nowrap;
+}
+
+.event {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  flex-grow: 1;
+}
+
+.eventsSidebar {
+  flex-grow: 0;
+}
+/*@media only screen and (max-device-width: 480px) {
+      .show-mobile {
+        display: block;
+      }
+      .hide-mobile {
+        display: none;
+      }
+    }
+
+ @media only screen and (min-device-width: 481px) {
+      .show-mobile {
+        display: none;
+      }
+      .hide-mobile {
+        display: block;
+      }
+    }*/
