--- a/client/style.css
+++ b/client/style.css
@@ -50,6 +50,11 @@
 
 .eventsSidebar {
   flex-grow: 0;
+  border-right: 1px solid #ddd;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 500px;
+  width: 350px;
 }
 
 /*@media only screen and (max-device-width: 480px) {
