--- a/client/style.css
+++ b/client/style.css
@@ -7,6 +7,7 @@
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
   margin: auto;
+  margin-top: 10px;
 }
 
 @-webkit-keyframes spin {
